Prepare app to dockerizing